feat: crud categories
