# app/models/account.rb
@@ -3,4 +3,5 @@ class Account < ApplicationRecord
   include Rodauth::Model(RodauthApp.rodauth)
   enum :status, unverified: 1, verified: 2, closed: 3
   has_many :financial_accounts, dependent: :destroy
+  has_many :categories, dependent: :destroy
 end
