# app/serializers/category_serializer.rb
@@ -1,0 +1,3 @@
+class CategorySerializer < ActiveModel::Serializer
+  attributes :id, :category_type, :name
+end
